--- a/admin/graphql/public/locales/en/common.json
+++ b/admin/graphql/public/locales/en/common.json
@@ -501,8 +501,18 @@
   "text-new-terms": "Add new Terms",
   "text-order-management": "Order management",
   "text-transactions": "Transactions",
+  "text-modules": "Modules",
+  "text-all-modules": "All modules",
+  "text-list-modules": "List modules",
+  "text-create-modules": "Create modules",
+  "text-permissions": "Permissions",
+  "text-all-permissions": "All permissions",
+  "text-list-permissions": "List permissions",
+  "text-create-permissions": "Create permissions",
   "text-user-control": "User control",
   "text-all-users": "All users",
+  "text-list-users": "List users",
+  "text-create-users": "Create user",
   "text-admin-list": "Admin list",
   "text-all-vendors": "All vendors",
   "text-pending-vendors": "Pending vendors",
