--- a/admin/graphql/public/locales/en/form.json
+++ b/admin/graphql/public/locales/en/form.json
@@ -1,5 +1,6 @@
 {
   "form-title-permission": "Permission",
+  "form-title-modules": "Modules",
   "form-title-create-product": "Create New Product",
   "form-title-edit-product": "Edit Product",
   "form-title-edit-faq": "Edit FAQ",
@@ -22,6 +23,8 @@
   "form-title-create-order-status": "Create Order Status",
   "form-title-edit-order-status": "Edit Order Status",
   "form-title-create-customer": "Create New User",
+  "form-title-create-permission": "Create New Permission",
+  "form-title-create-modules": "Create New Modules",
   "form-title-update-customer": "Update Customer",
   "form-title-create-coupon": "Create New Coupon",
   "form-title-edit-coupon": "Edit Coupon",
@@ -177,6 +180,8 @@
   "button-label-change": "Change",
   "button-label-change-status": "Change Status",
   "input-label-users": "Users",
+  "input-label-permissions": "Permissions",
+  "input-label-modules": "Modules",
   "input-label-customers": "Customers",
   "input-label-staffs": "Staffs",
   "button-label-add-user": "Add User",
