--- a/admin/graphql/public/locales/en/table.json
+++ b/admin/graphql/public/locales/en/table.json
@@ -75,6 +75,7 @@
   "table-item-is-approved": "Is Approved",
   "table-item-approval-action": "Approval Action",
   "table-item-permissions": "Permissions",
+  "table-item-modules": "Modules",
   "table-item-question-answer": "Question & Answer",
   "table-item-customer-name": "Customer Name",
   "table-item-customer": "Customer",
